# paper-search-mcp

./: .gitignore  Cargo.toml  Cross.toml
.github/workflows/: release.yml
src/: config.rs  main.rs  search.rs
src/apis/: ads.rs  arxiv.rs  crossref.rs  doaj.rs  europepmc.rs  inspire.rs  mod.rs  openalex.rs  semantic_scholar.rs  unpaywall.rs  vixra.rs
src/embed/: mod.rs  specter.rs
src/index/: fulltext.rs  hybrid.rs  mod.rs  vectordb.rs
