[package]
name = "paper-search"
version = "0.1.0"
edition = "2021"
description = "MCP server for searching, indexing, and retrieving scientific papers"
license = "MIT"

[features]
default = []
onnx = ["dep:ort", "dep:tokenizers"]
vendored-openssl = ["dep:openssl"]

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lancedb = "0.26"
tantivy = "0.25"
ort = { version = "2.0.0-rc.11", optional = true }
tokenizers = { version = "0.22", features = ["http"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
quick-xml = "0.37"
scraper = "0.25"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
strsim = "0.11"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
anyhow = "1"
schemars = "1"
openssl = { version = "0.10", features = ["vendored"], optional = true }
